@@ -2,7 +2,7 @@
 # Copyright (c) 2003 Gavin Brown. All rights reserved. This program is
 # free software; you can redistribute it and/or modify it under the same
 # terms as Perl itself. 
-# $Id: podviewer,v 1.14 2003/09/19 20:52:36 jodrell Exp $
+# $Id: podviewer,v 1.15 2004/01/25 12:51:37 jodrell Exp $
 use lib 'lib/';
 use Gtk2 -init;
 use Gtk2::PodViewer;
@@ -141,7 +141,9 @@ $search_hbox->pack_start(Gtk2::Label->new('Search:'), 0, 0, 0);
 $search_hbox->pack_start($search_entry,  1, 1, 0);
 $search_hbox->pack_start($search_button, 0, 0, 0);
 
-my $index = Gtk2::SimpleList->new('icon' => 'pixbuf', 'title' => 'text');
+my $index = Gtk2::SimpleList->new('icon' => 'pixbuf',
+                                  'title' => 'text',
+                                  'link' => 'hidden');
 $index->set_headers_visible(0);
 $index->get_column(1)->set_sizing('autosize');
 
@@ -160,11 +162,11 @@ $index_button->signal_connect('toggled', sub {
 });
 
 my $viewer = Gtk2::PodViewer->new;
-$viewer->set_link_callback(\&link_clicked);
+$viewer->signal_connect (link_clicked => \&link_clicked);
 
 $index->get_selection->signal_connect('changed', sub {
 	my $idx = ($index->get_selected_indices)[0];
-	my $mark = $index->{data}[$idx][1];
+	my $mark = $index->{data}[$idx][2];
 	$viewer->jump_to($mark);
 	return 1;
 });
@@ -260,6 +262,13 @@ sub browse {
 	return 1;
 }
 
+sub strippod {
+	my $text = shift;
+	$text =~ s/B<([^<]*)>/$1/g;
+	$text =~ s/E<gt>/>/g;
+	$text
+}
+
 sub load {
 	my $text = $combo->entry->get_text;
 	$text =~ s/^\s+//g;
@@ -271,7 +280,7 @@ sub load {
 	$up_button->set_sensitive(0);
 	if ($viewer->load($text)) {
 		@{$index->{data}} = ();
-		map { push(@{$index->{data}}, [ $idx_pbf, $_ ]) } $viewer->get_marks;
+		map { push(@{$index->{data}}, [ $idx_pbf, strippod ($_), $_ ]) } $viewer->get_marks;
 		if (-e $text) {
 			$window->set_title(sprintf('%s: %s', $NAME, basename($text)));
 		} else {
@@ -359,9 +368,10 @@ sub about {
 
 Using Gtk2::PodViewer v$Gtk2::PodViewer::VERSION
 
-Copyright (c) 2003
+Copyright (c) 2004
 Gavin Brown
 Torsten Schoenfeld
+Scott Arrington
 
 <span size="small">This program is free software; you can
 redistribute it and/or modify it under
